[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Sam Wlody <swlody@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { git = "https://github.com/swlody/aoc", branch = "main" }
